fix N + 1